assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Open+Sans:wght@600&display=swap');

* {
    border: none;
    margin: 0;
    padding: 0;
}

body {
    color: black;
    font-family: Montserrat, sans-serif;
    font-weight: 300;
}

/* Heading - logo and navigation */

h1 {
    font-family: Open Sans, sans-serif;    
    color: black;
}

#logo {
    float: left;
    font-size: 250%;
    margin-left: 50px;
}

#menu {
    font-size: 120%;
    float: right;
}

#menu li {
    float: left;
    list-style-type: none;
    margin-right: 50px;
}

#menu a {
    text-decoration: none;
    color: inherit;
}

#menu, #logo {
    line-height: 80px;
}

#menu a:hover {
   color: darkred;
   text-decoration: underline;
}

.active {
    color: darkred;
    text-decoration: underline;  
}

/* Home page - hero image section */

#hero-image {
    height: 500px;
    width: 100%;
    background: url(../images/hero-image-large.jpg) no-repeat center center;
    overflow: hidden;
}

#hero-text {
    color: white;
    font-family: Open Sans, sans-serif;
    font-size: 120%;   
    float: right;
    margin-right: 50px;

    top: 120px;
    right: 80px;

    position: absolute;
}

#hero-text h3 {
    color: white;
    font-family: Open Sans, sans-serif;
    font-size: 90%; 
    font-style: italic; 
    float: right;
    margin-right: 80px;

    top: 80px;
    right: 120px;

    position: absolute;
}

/* Services section */

.services {
    display: flex;
    justify-content: space-around;
    /* margin-left: 50px;
    margin-right: 50px;*/
    margin: auto 50px;
    padding-top: 30px;
}

.services > h2 {
    font-family: Open Sans, sans-serif; 
}

.services p {
    padding-top: 10px;
}

/* Footer section */

footer {
    background-color: gray;
    height: 80px;
}

.footer-links {
    text-align: center;
}

.footer-links > li {
    display: inline;
}
 
.footer-links i {
    font-size: 250%;
}

